bin/tests/snapshots/empty_let_in__lint_5c1128abfe4ef6b1ed846295f216703aa1c58b4fcadad40bc25e05858c3bdd08.snap
---
source: bin/tests/empty_let_in.rs
expression: "\"let in null\""
---
[W02] Warning: Useless let-in expression
   ╭─[<temp_file_path>:1:1]
   │
 1 │ let in null
   · ─────┬─────  
   ·      ╰─────── This let-in expression has no entries
───╯
